Start Parameter erweitert
den MarkSweepGC in den para metern geaddet
und auf 10 GB max ram erhöt